[Fix] Pinned tab overlap (#4)

--- a/userChrome.css
+++ b/userChrome.css
@@ -148,8 +148,6 @@
 
 
 /* animations */
-toolbarbutton,
-.toolbarbutton-icon,
 .subviewbutton,
 #urlbar-background,
 .urlbar-icon,
